# Oracle

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
docs/: DESIGN.md  OPERATIONS.md  SECURITY.md  SPEC.md  STRESS.md
docs/adr/: adr-2026-06-11-enterprise-environment-tier.md
docs/eval/: 2026-06-11.md
docs/remediation/: REMEDIATION.md  SUB-1-kernel-core.md  SUB-2-shell-core.md  SUB-3-guard.md  SUB-4-docs.md  SUB-5-roadmap.md
docs/roadmap/: PHASE-1-foundation-hardening.md  PHASE-2-confidential-tier.md  PHASE-3-forced-grounding.md  PHASE-4-gateway-platform.md  PHASE-5-operations-and-fleet.md  PHASE-6-trust-and-evaluation.md  PHASE-7-knowledge-connectors.md  PHASE-8-retrieval-quality.md  ROADMAP.md
eval/fixtures/: regen_retrieval_gold.py  retrieval_gold.json
installer/: install.sh
src/oracle_agent/: __init__.py  backup_shell.py  cli.py  config.py  curator.py  doctor.py  grounding_report.py  manifest.py  security_map.py  spawn.py  testkit.py  upgrade_shell.py  wizard.py
tests/shell/: conftest.py  test_agentloop.py  test_backup_shell.py  test_behavior_eval.py  test_briefer.py  test_cli.py  test_config.py  test_curator.py  test_doctor_connectors.py  test_doctor_surfaces.py  test_embedder_enforcer.py  test_eval_catalog.py  test_eval_cli.py  test_eval_faults.py  test_eval_harness.py  test_gateway_core.py  test_gateway_email.py  test_gateway_http.py  test_gateway_slack.py  test_grounding.py  test_grounding_perf.py  test_grounding_shadow.py  test_installer.py  test_llm_client.py  test_policy_bridge.py  test_retrieval_gold.py  (+13 more)
(+259 files in other folders)
